--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,10 @@ h4 {
   display: none;
 }
 
+.map-img {
+  width: 70%;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
@@ -173,6 +177,10 @@ h4 {
 
   .heading-sub {
     font-size: 20px;
+  }
+
+  .map-img {
+    width: 100%;
   }
 }
 
