--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,31 @@ h4 {
   width: 70%;
 }
 
+.bar-img {
+  margin: auto;
+  margin-top: 45px;
+  margin-bottom: 25px;
+  display: block;
+  height: 100px;
+  max-width: 100%;
+}
+
+.section-2-4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chart-img {
+  max-width: 100%;
+  height: 630px;
+}
+
+.chart-img-mobile {
+  max-width: 100%;
+  display: none;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
@@ -217,5 +242,13 @@ h4 {
 
   .cloud-md {
     display: none;
+  }
+
+  .chart-img {
+    display: none;
+  }
+  
+  .chart-img-mobile {
+    display: block;
   }
 }
