--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,37 @@ h4 {
   display: none;
 }
 
+.section-3 {
+  text-align: center;
+}
+
+.sect-3-1-wrapper {
+  display: flex;
+  align-items: center; 
+  justify-content: space-evenly;
+}
+
+.sect-3-1-img {
+  max-width: 100%;
+  height: 400px;
+}
+
+.sect-3-1-text {
+  width: 600px;
+  font-weight: lighter;
+  text-align: justify;
+}
+
+.sect-3-card {
+  max-width: 100%;
+  width: 800px;
+  height: auto;
+}
+
+.font-weight-bold {
+  font-weight: bold;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
@@ -250,5 +281,25 @@ h4 {
   
   .chart-img-mobile {
     display: block;
+  }
+}
+
+@media(max-width: 1010px) {
+  .sect-3-1-wrapper {
+    flex-direction: column-reverse;
+  }
+
+  .sect-3-1-img {
+    order: 1;
+    max-width: 100%;
+    width: 200px;
+    height: auto;
+  }
+
+  .sect-3-1-text {
+    text-align: center;
+    font-size: 16px;
+    width: 100%;
+    padding: 10px;
   }
 }
