--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,10 @@ h4 {
   justify-content: center;
 }
 
+.pink-text {
+  color: #CF5B87;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
