--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,27 @@ h4 {
   display: none;
 }
 
+.sect-8-card-container {
+  display: flex;
+  justify-content: center;
+}
+
+.horizontal-spacer {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.sect-8-card-img {
+  width: 370px;
+  max-width: 40%;
+}
+
+.sect-8-text-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
