--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,42 @@ h4 {
   justify-content: center;
 }
 
+.section-9 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-9-heading-img {
+  width: 600px;
+  max-width: 80%;
+  margin-bottom: 40px;
+}
+
+.section-9-grid-container {
+  display: flex;
+  justify-content: space-evenly !important;
+}
+
+.section-9-q-img {
+  width: 600px;
+  max-width: 80%;
+  margin-bottom: 8px;
+}
+
+.sect-9-left-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.sect-9-right-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
@@ -425,6 +461,8 @@ h4 {
   .map-img {
     width: 100%;
   }
+
+  
 }
 
 @media (max-width: 600px) {
