--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,10 @@ h4 {
   align-items: flex-start;
 }
 
+.sect-9-mobile {
+  display: none;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
@@ -462,7 +466,19 @@ h4 {
     width: 100%;
   }
 
-  
+  .sect-9-desktop {
+    display: none;
+  }
+
+  .sect-9-mobile {
+    display: inherit;
+  }
+
+  .section-9-grid-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 600px) {
