--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ h4 {
   margin-bottom: 25px;
   display: block;
   height: 100px;
-  max-width: 100%;
+  max-width: 100%;  
 }
 
 .section-2-4 {
@@ -227,6 +227,17 @@ h4 {
 .sect-3-1-img {
   max-width: 100%;
   height: 400px;
+}
+
+.computer-girl {
+  position: relative;
+}
+
+.computer-girl__heart {
+  position: absolute;
+  left: 0;
+  width: 50px;
+  animation: heartbeat infinite ease 2s;
 }
 
 .sect-3-1-text {
@@ -809,4 +820,32 @@ h4 {
   60% { transform: translateX(30px); }
   80% { transform: translateX(10px); }
   100% { transform: translateX(0); }
+}
+
+@keyframes heartbeat
+{
+  0%
+  {
+    transform: scale( .75 );
+  }
+  20%
+  {
+    transform: scale( 1 );
+  }
+  40%
+  {
+    transform: scale( .75 );
+  }
+  60%
+  {
+    transform: scale( 1 );
+  }
+  80%
+  {
+    transform: scale( .75 );
+  }
+  100%
+  {
+    transform: scale( .75 );
+  }
 }
