--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,55 @@ h4 {
   width: 170px;
 }
 
+.question-box {
+  max-width: 500px;
+  height: auto;
+  margin-bottom: 8px;
+  background-color: rgba(255, 255, 255, .3);
+  border-radius: 45px;
+}
+
+.question-box__head {
+  background-color: rgba(255, 255, 255, .3);
+  border-radius: 45px 45px 0 0;
+  width: 100%;
+  min-height: 70px;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.question-answers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 30px;
+}
+
+.answered {
+  background-color: white !important;
+}
+
+.question-answers__choice {
+  background-color: rgba(255, 255, 255, .5);
+  border-radius: 80px;
+  padding: 20px 40px;
+  width: 100%;
+  color: #CF5B87;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all .5s;
+}
+
+.question-answers__choice:hover {
+  background-color: white;
+}
+
+.question-answers__choice:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 480px) {
   .app-bar > img {
