--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,7 @@ h4 {
 
 .sect-9-mobile {
   display: none;
+  padding: 5px;
 }
 
 .footer {
@@ -578,6 +579,34 @@ h4 {
 
 .question-answers__choice:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0.9);
+  text-align: center;
+  z-index: 20000;
+}
+
+.modal-wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.dialog-img {
+  width: 500px;
+  max-width: 80%;
+  height: auto;
+  max-height: 95vh;
+  z-index: 200000;
 }
 
 /* MEDIA QUERIES */
