--- a/css/style.css
+++ b/css/style.css
@@ -598,13 +598,13 @@ h4 {
   height: 100%;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 0px;
 }
 
 .dialog-img {
   width: 500px;
-  max-width: 80%;
-  height: auto;
+  max-width: 95%;
+  height: 95vh;
   max-height: 95vh;
   z-index: 200000;
 }
